--- a/Matching_RUsersGroup.ipynb
+++ b/Matching_RUsersGroup.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMhMo1n+/KXPPP1rOTGN7Vc",
+      "authorship_tag": "ABX9TyMQIZ8iHWrQxtEXzEYwzLOu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -303,7 +303,7 @@
         "\n",
         "Mahalanobis Distance\n",
         "\n",
-        "$$ D(\\underline{x}_i, \\underline{x}_j) = \\sqrt{(\\underline{x}_i- \\underline{x}_j)^T\\hat{\\Sigma}_{\\underline{x}}(\\underline{x}_i- \\underline{x}_j)} = \\sqrt{\\sum_{p =1}^{k}\\sum_{q =1}^{k} \\hat{\\sigma}_{p,q}(x_{p,i}- x_{p,j})(x_{q,i}- x_{q,j})}   $$\n",
+        "$$ D(\\underline{x}_i, \\underline{x}_j) = \\sqrt{(\\underline{x}_i- \\underline{x}_j)^T\\hat{\\Sigma}_{\\underline{x}}^{-1} (\\underline{x}_i- \\underline{x}_j)} = \\sqrt{\\sum_{p =1}^{k}\\sum_{q =1}^{k} \\hat{\\sigma}_{p,q}^{-1} (x_{p,i}- x_{p,j})(x_{q,i}- x_{q,j})}   $$\n",
         "\n",
         "where $\\hat{\\Sigma}_{\\underline{x}} =  \\{\\hat{\\sigma}_{p,q} \\} = \\{ \\frac{1}{n} \\sum_{i=1}^n (x_{p,i}- \\bar{x}_{p})(x_{q,i}- \\bar{x}_{q}) \\} $\n",
         "\n",
@@ -450,7 +450,7 @@
         "id": "X_PotHzW6USR",
         "outputId": "ee4412e5-7f66-4daf-9182-e23e54facb74"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -495,7 +495,7 @@
         "id": "Ia27f2kX8nTJ",
         "outputId": "b45ed235-f5b2-492f-cab6-0c0035e57f6e"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -539,7 +539,7 @@
         "id": "NzgUjt_C5hfX",
         "outputId": "75f75217-3af3-464d-ab8d-3a379ac881e7"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -592,7 +592,7 @@
       "metadata": {
         "id": "PZ6iXUPv9A0v"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -620,7 +620,7 @@
         "id": "WrKeHG7u-n2G",
         "outputId": "7aab4853-17fe-43ee-8544-8b1591c29ff8"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -693,7 +693,7 @@
         "id": "4LILfuA2_adu",
         "outputId": "22285f17-fab8-414a-e3b6-5d73f3d06f11"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -740,7 +740,7 @@
         "id": "EtvIEz6CBe_w",
         "outputId": "4961a0c1-b7f4-4ce3-c832-4ad1967680a7"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -796,7 +796,7 @@
         "id": "5eBcSQppDUxU",
         "outputId": "0bb1e6ed-5039-4027-8f42-b944e61d07fb"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -986,7 +986,7 @@
         "id": "chr28yqDEIah",
         "outputId": "5325a73d-f900-4994-e282-11191e2d1f07"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1044,7 +1044,7 @@
         "id": "wwy9oNGxGsOV",
         "outputId": "6da37d77-4086-4a34-87a7-8ce21cb6cd2e"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1148,7 +1148,7 @@
         "id": "b9xxyjvyHxu7",
         "outputId": "dd11cb5a-0eae-449a-9703-a57b337ab1e9"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1193,7 +1193,7 @@
         "id": "-e6bSut0IJU5",
         "outputId": "04aaf162-c5d7-435d-e9ef-355c073febd2"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1253,7 +1253,7 @@
       "metadata": {
         "id": "LB9_6ahtKS7r"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1285,7 +1285,7 @@
         "id": "8-AjqRnvKxLU",
         "outputId": "4840e401-19e2-4568-f0bc-8996df0c6f4e"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1431,7 +1431,7 @@
         "id": "Vl9RWXVsLIgo",
         "outputId": "7ee221bb-65fb-4aae-cceb-1de3d9161b8a"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1479,7 +1479,7 @@
         "id": "GP2UPduZLT9k",
         "outputId": "fb38681c-049c-45e5-9ad8-8511fa027695"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1670,7 +1670,7 @@
         "id": "dTK7q0EnLbdM",
         "outputId": "d8aaab82-46f4-4229-f14a-a4643e844e30"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
