--- a/Matching_RUsersGroup.ipynb
+++ b/Matching_RUsersGroup.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMQIZ8iHWrQxtEXzEYwzLOu",
+      "authorship_tag": "ABX9TyPKCbNzymR7ziFf3gE1CMSp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -309,7 +309,7 @@
         "\n",
         "Propensity Score Distances\n",
         "\n",
-        "A propensity score is the estimated probability\n",
+        "A propensity score is the estimated probability of being a member of a group, in this case, the treatment group.\n",
         "\n",
         "Fit a logistic regression model or a machine learning model for with treatment variable T (binary 0/1) as the model outcome and the covariates as model input variables. From this model, generate the predicted probabilities $\\hat{\\pi}(\\underline{x}_i)=\\hat{P(T=1|\\underline{x}_i)}$ or linear predictor values $ logit [ \\hat{\\pi}(\\underline{x}_i) ] =\\underline{x}_i^T \\hat{\\underline{\\beta}}_{logistic}  $ if using a logistic regression.\n",
         "\n",
