--- a/Matching_RUsersGroup.ipynb
+++ b/Matching_RUsersGroup.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPKCbNzymR7ziFf3gE1CMSp",
+      "authorship_tag": "ABX9TyPVWwc5QZ7xSm7HRaj0h7jd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -303,7 +303,7 @@
         "\n",
         "Mahalanobis Distance\n",
         "\n",
-        "$$ D(\\underline{x}_i, \\underline{x}_j) = \\sqrt{(\\underline{x}_i- \\underline{x}_j)^T\\hat{\\Sigma}_{\\underline{x}}^{-1} (\\underline{x}_i- \\underline{x}_j)} = \\sqrt{\\sum_{p =1}^{k}\\sum_{q =1}^{k} \\hat{\\sigma}_{p,q}^{-1} (x_{p,i}- x_{p,j})(x_{q,i}- x_{q,j})}   $$\n",
+        "$$ D(\\underline{x}_i, \\underline{x}_j) = \\sqrt{(\\underline{x}_i- \\underline{x}_j)^T\\hat{\\Sigma}_{\\underline{x}}^{-1} (\\underline{x}_i- \\underline{x}_j)}  $$\n",
         "\n",
         "where $\\hat{\\Sigma}_{\\underline{x}} =  \\{\\hat{\\sigma}_{p,q} \\} = \\{ \\frac{1}{n} \\sum_{i=1}^n (x_{p,i}- \\bar{x}_{p})(x_{q,i}- \\bar{x}_{q}) \\} $\n",
         "\n",
